chore: updating docker-compose.yml